# standalone_tools

./: .gitignore  CLAUDE.md  README.md  personal
.thoughts/: config.json
tools/: agent-wrap
vim/: Cargo.toml  README.md  justfile
vim/benches/: keystrokes.rs
vim/examples/: egui_app.rs  tui_crossterm.rs
vim/src/: engine.rs  key.rs  lib.rs  traits.rs  types.rs
vim/tests/: movement_basic.rs  operators_visual.rs  phase3_motions.rs  property_tests.proptest-regressions  property_tests.rs  search_tests.rs  yank_paste.rs
vim/tests/support/: mock_buffer.rs  mock_clipboard.rs  mod.rs
whisperer/: .gitignore  README.md  TODO.md  package.json
whisperer/src/: App.css  App.tsx  api.ts  types.ts
whisperer/src-tauri/: Cargo.toml  tauri.conf.json
whisperer/src-tauri/src/: audio.rs  audio_processor.rs  commands.rs  common.rs  lib.rs  main.rs  settings.rs  state.rs  storage.rs  transcription.rs
whisperer/src-tauri/src/android_audio/: mod.rs
whisperer/src-tauri/src/linux_audio/: mod.rs
whisperer/src-tauri/tauri-plugin-audio/: .gitignore  Cargo.toml  build.rs
whisperer/src-tauri/tauri-plugin-audio/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
whisperer/src-tauri/tauri-plugin-audio/android/src/main/java/com/whisperer/audio/: AudioRecorderPlugin.kt
whisperer/src-tauri/tauri-plugin-audio/permissions/: microphone.toml
whisperer/src-tauri/tauri-plugin-audio/permissions/autogenerated/: reference.md
whisperer/src-tauri/tauri-plugin-audio/permissions/schemas/: schema.json
whisperer/src-tauri/tauri-plugin-audio/src/: lib.rs  mobile.rs
whisperer/src/components/: FileUploadButton.tsx  RecordingControls.tsx  RecordingsList.tsx  Settings.tsx
