[package]
name = "tauri-plugin-audio"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-audio"

[lib]
name = "tauri_plugin_audio"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"